17. Implement all size grips.
18. Fix border of non-rounded, selected tabs.
19. Fix tab coloured mouse-over when not rounded.
20. New mouse over effect - glow. Only applicable if etching or shadowing.
21. New default button indicator - glow. Only applicable if etching
    or shadowing.
22. Allow up to 5 custom defined gradients.
23. Allow custom shades to be specified.

0.58
----
 1. Add a config option for menu stripe appearance - defaults to gradient.
 2. Add a config option for selection appearance - defaults to flat. (Qt4.4+)
 3. Use background colour for disabled scrollbar buttons.
 4. Remove some frames from systemsettings.
 5. Make list/tree view highlight more KDE3-like.
 6. Don't draw menu separators through stripe.
 7. Draw menu stripe on the right for RTL languages.
 8. Qt4.4 fixes.
 9. Fix blurry arrow on KDE's colour dialog.
10. Don't show table headers as sunken unless they actually are.
11. Don't do mouseover for disabled listviews, treeviews, or tabs.
12. Right-align QMessageBox buttons - more KDE like.
13. Supply a QtCurve colors file.
14. Lighter menustripe when not lightening menus.
15. Lighter menu separators.
16. Improve look of etch/shadow effect.
17. Disable etch/shadow for krunner.

0.57.1
------
1. Fix border drawing when not rounding.
2. Fix for menu stripe and large icons.

0.57
----
1. Modify defaults:
     Turn off shade menubar only of active window
     Set default button indicator to tint
2. Added option to highlight background of check/radio text on mouseover.
3. Use QPainterPath to draw borders and triangular sliders.
4. Removed plasmaHack. Drawing glitches improved by using antialising
   for certain lines.
5. Fix for kwin and Qt4.4 - thanks to Franz Fellner.
6. Don't allow to select bevelled for titlebar appearance.
7. 'Fix' for konqueror's 'show close button on tab' setting.

0.56.3
------
1. Don't set sliders to flat just because appearance is flat.

0.56.2
------